# test-flutter-linux

./: .metadata  LICENSE  README.md  pubspec.yaml
.github/workflows/: build.yml
lib/: main.dart
linux/: CMakeLists.txt  my_application.cc
patch/: 0001-Remove-unsupported-cross-build-exception-for-Linux.patch  0002-WIP-Simplify-cross-building-for-Linux.patch
sysroots/: .gitignore
tools/: .gitignore  build_pkgconf.sh  create_cmake_arm64_toolchain.sh  download_clang.sh  download_sysroot.sh  sysroots.json
tools/validation_toolchain/: .gitignore  CMakeLists.txt  main.cpp
web/: index.html  manifest.json
